<resources>
    <string name="app_name">EmoVision</string>
    <string name="text_about_app">About App</string>
    <string name="text_tittle_type">Type of Expression</string>
    <string name="text_scan">Scan</string>
    <string name="text_view_ekspression">Ekspresi: %1$s</string>
    <string name="text_type_of_expression">Macam-Macam Ekspresi</string>
    <string name="text_expression_angry">Marah</string>
    <string name="text_expression_disgust">Jijik</string>
    <string name="text_expression_fear">Takut</string>
    <string name="text_expression_happy">Senang</string>
    <string name="text_expression_neutral">Netral</string>
    <string name="text_expression_sad">Sedih</string>
    <string name="text_expression_surprise">Terkejut</string>
    <string name="text_desc_angry">Ekspresi marah merupakan respons emosional terhadap situasi yang dianggap mengancam, tidak adil, atau mengganggu kepentingan pribadi. Orang yang marah cenderung menunjukkan wajah yang tegang, alis yang berkerut ke dalam, mata yang tajam menatap ke depan, dan bibir yang mengencang atau menekan. Dalam beberapa kasus, ekspresi marah juga disertai dengan perubahan fisik, seperti peningkatan detak jantung, suara yang meninggi, atau bahkan tindakan agresif.\n\n📌 Sebab:\n\n ~Mendapatkan perlakuan yang tidak adil atau diperlakukan kasar.\n~ Merasa frustrasi akibat kegagalan atau hambatan yang terus-menerus.\n~ Mengalami provokasi, seperti hinaan atau ejekan dari orang lain.\n~ Melihat sesuatu yang bertentangan dengan nilai atau keyakinan yang dianut.\n\n📌 Akibat:\n\n~ Bisa meningkatkan kewaspadaan dan mendorong tindakan untuk memperbaiki situasi.\n~ Jika tidak dikendalikan, dapat menyebabkan konflik dan merusak hubungan sosial.\n~ Secara fisiologis, dapat meningkatkan tekanan darah dan kadar hormon stres dalam tubuh.</string>
    <string name="text_desc_disgust">Ekspresi jijik adalah reaksi alami terhadap sesuatu yang dianggap menjijikkan, baik secara fisik maupun moral. Ciri-ciri utama ekspresi ini meliputi hidung yang mengerut, bibir yang tertutup rapat atau melengkung ke bawah, serta ekspresi mata yang seolah menghindari objek yang menjijikkan. Dalam konteks sosial, rasa jijik tidak hanya terjadi pada bau atau rasa yang tidak menyenangkan, tetapi juga pada tindakan atau perilaku yang tidak bermoral.\n\n📌 Sebab:\n\n ~Melihat atau mencium sesuatu yang busuk, seperti makanan basi atau benda yang kotor.\n~ Menyaksikan tindakan yang dianggap kejam, tidak etis, atau amoral.\n~ Mengalami pengalaman yang dianggap menjijikkan, seperti menyentuh sesuatu yang berlendir.\n~ Mendengar cerita atau melihat sesuatu yang membuat tidak nyaman.\n\n📌 Akibat:\n\n~ Dapat mencegah seseorang dari konsumsi makanan atau zat berbahaya.\n~ Bisa memperkuat nilai moral dengan menolak perilaku yang dianggap tidak pantas.\n~ Jika berlebihan, dapat menyebabkan seseorang terlalu sensitif terhadap hal-hal yang sebenarnya tidak berbahaya.</string>
    <string name="text_desc_fear">Ekspresi takut muncul sebagai respons terhadap ancaman atau bahaya, baik yang nyata maupun yang dibayangkan. Wajah yang ketakutan biasanya menunjukkan mata yang melebar, alis yang terangkat tinggi, mulut yang sedikit terbuka, dan tubuh yang tampak menegang. Rasa takut bertujuan untuk melindungi diri dari bahaya dengan mempersiapkan tubuh untuk melarikan diri atau menghadapi ancaman.\n\n📌 Sebab:\n\n~ Menghadapi situasi yang mengancam nyawa, seperti melihat hewan buas atau mengalami kecelakaan.\n~ Takut terhadap konsekuensi buruk, seperti kegagalan dalam ujian atau kehilangan sesuatu yang berharga.\n~ Mengalami pengalaman traumatis di masa lalu yang menimbulkan ketakutan mendalam.\n~ Mendengar suara atau melihat sesuatu yang tidak biasa di lingkungan sekitar.\n\n📌 Akibat:\n\n~ Bisa memicu mekanisme "fight or flight" (melawan atau lari) untuk bertahan hidup.\n~ Jika berlebihan, dapat menyebabkan gangguan kecemasan atau fobia tertentu.\n~ Membantu seseorang menjadi lebih waspada terhadap bahaya di sekitarnya.</string>
    <string name="text_desc_happy">Ekspresi senang adalah manifestasi dari perasaan bahagia dan kepuasan. Ciri khasnya adalah senyuman yang lebar, mata yang sedikit menyipit, serta raut wajah yang lebih rileks dan terbuka. Kebahagiaan sering kali menular dan dapat menciptakan suasana yang positif di sekitar seseorang.\n\n📌 Sebab:\n\n~ Mendapatkan kabar baik, seperti kelulusan atau promosi pekerjaan.\n~ Menghabiskan waktu bersama orang yang dicintai, seperti keluarga atau teman dekat.\n~ Mencapai tujuan atau keberhasilan setelah usaha yang keras.\n~ Mengalami sesuatu yang menyenangkan, seperti mendengarkan musik favorit atau menikmati makanan enak.\n\n📌 Akibat:\n\n~ Dapat meningkatkan kesehatan mental dan fisik secara keseluruhan.\n~ Mempererat hubungan sosial dengan orang lain.\n~ Membantu seseorang menjadi lebih optimis dan termotivasi dalam menjalani hidup.</string>
    <string name="text_desc_neutral">Ekspresi netral adalah kondisi di mana wajah tidak menunjukkan emosi tertentu. Biasanya, wajah netral terlihat santai, tanpa ekspresi berlebihan, dan tidak menampilkan ketegangan atau kebahagiaan yang mencolok. Ekspresi ini sering digunakan dalam situasi formal atau saat seseorang tidak ingin mengungkapkan perasaannya.\n\n📌 Sebab:\n\n~ Sedang dalam keadaan santai tanpa emosi yang dominan.\n~ Berusaha menyembunyikan perasaan agar tidak terbaca oleh orang lain.\n~ Fokus terhadap sesuatu tanpa reaksi emosional yang berlebihan.\n~ Tidak memiliki keterlibatan emosional dalam suatu situasi.\n\n📌 Akibat:\n\n~ Bisa memberikan kesan tenang dan profesional dalam berbagai situasi.\n~ Terkadang dianggap kurang ekspresif atau sulit ditebak oleh orang lain.\n~ Membantu dalam komunikasi yang lebih netral dan objektif.</string>
    <string name="text_desc_sad">Ekspresi sedih menunjukkan perasaan kehilangan, kecewa, atau kesepian. Ciri khasnya adalah bibir yang tertarik ke bawah, mata yang sedikit menunduk, dan ekspresi wajah yang terlihat muram. Dalam beberapa kasus, sedih juga bisa diiringi dengan tangisan sebagai bentuk pelepasan emosi.\n\n📌 Sebab:\n\n~ Mengalami kehilangan, seperti kematian seseorang yang dicintai atau perpisahan.\n~ Menghadapi kegagalan atau kekecewaan dalam hidup.\n~ Merasa kesepian atau tidak dipahami oleh orang lain.\n~ Mengalami pengalaman traumatis atau luka emosional yang mendalam.\n\n📌 Akibat:\n\n~ Bisa menjadi proses alami untuk menyembuhkan diri dari luka emosional.\n~ Jika berkepanjangan, dapat menyebabkan depresi atau gangguan mental lainnya.\n~ Membantu seseorang lebih memahami nilai-nilai dalam hidup, seperti pentingnya hubungan sosial.</string>
    <string name="text_desc_surprise">Ekspresi terkejut terjadi ketika seseorang mengalami sesuatu yang tidak terduga. Ciri khas ekspresi ini adalah mata yang membesar, mulut yang terbuka, serta tubuh yang sedikit menegang. Rasa terkejut bisa bersifat positif atau negatif, tergantung pada situasi yang menyebabkan reaksi tersebut.\n\n📌Sebab:\n\n ~ Mendengar kabar yang tidak disangka, baik itu kabar baik atau buruk.\n~ Mengalami kejadian mendadak, seperti seseorang yang tiba-tiba muncul dari belakang.\n~ Menyaksikan sesuatu yang luar biasa atau di luar kebiasaan.\n~ Mendengar suara keras atau melihat kilatan cahaya mendadak.\n\n📌 Akibat:\n\n~ Meningkatkan kesadaran dan fokus terhadap lingkungan sekitar.\n~ Dapat memicu reaksi cepat dalam menghadapi situasi darurat.\n~ Jika terlalu sering, bisa menyebabkan stres atau kecemasan.</string>
    <string name="text_games">Games</string>
    <string name="text_game_quiz">EmoQuiz</string>
    <string name="text_game_completed">Game Completed</string>
    <string name="text_thank_you">Terimakasih Telah Memainkan Game Ini!</string>
    <string name="text_back">Kembali</string>
    <string name="text_restart">Restart</string>
    <string name="text_game_face_match">Face Match Challenge</string>
    <string name="question_1">Apa ciri utama ekspresi marah?</string>
    <string name="option_1A">Mata melebar</string>
    <string name="option_1B">Alis berkerut ke dalam</string>
    <string name="option_1C">Mulut terbuka</string>
    <string name="option_1D">Hidung mengerut</string>
    <string name="question_2">Apa yang biasanya menyebabkan seseorang merasa marah?</string>
    <string name="option_2A">Mendengar suara keras</string>
    <string name="option_2B">Mengalami kegagalan</string>
    <string name="option_2C">Melihat sesuatu yang menjijikkan</string>
    <string name="option_2D">Mendapat kejutan</string>
    <string name="question_3">Apa salah satu akibat dari ekspresi marah jika tidak dikendalikan?</string>
    <string name="option_3A">Meningkatkan hubungan sosial</string>
    <string name="option_3B">Menurunkan detak jantung</string>
    <string name="option_3C">Menimbulkan konflik</string>
    <string name="option_3D">Membantu fokus</string>
    <string name="question_4">Ekspresi jijik sering kali ditandai dengan …</string>
    <string name="option_4A">Mata melebar</string>
    <string name="option_4B">Senyuman lebar</string>
    <string name="option_4C">Hidung mengerut</string>
    <string name="option_4D">Alis terangkat tinggi</string>
    <string name="question_5">Apa penyebab utama seseorang merasa jijik?</string>
    <string name="option_5A">Melihat makanan basi</string>
    <string name="option_5B">Mendengar kabar baik</string>
    <string name="option_5C">Mencapai keberhasilan</string>
    <string name="option_5D">Berhasil dalam ujian</string>
    <string name="question_6">Apa dampak positif dari rasa jijik?</string>
    <string name="option_6A">Menghindari makanan berbahaya</string>
    <string name="option_6B">Meningkatkan tekanan darah</string>
    <string name="option_6C">Membantu melawan ancaman</string>
    <string name="option_6D">Menjaga hubungan sosial</string>
    <string name="question_7">Bagaimana ciri wajah seseorang yang merasa takut?</string>
    <string name="option_7A">Alis terangkat tinggi</string>
    <string name="option_7B">Bibir melengkung ke bawah</string>
    <string name="option_7C">Senyuman lebar</string>
    <string name="option_7D">Mata menyipit</string>
    <string name="question_8">Apa penyebab umum dari rasa takut?</string>
    <string name="option_8A">Mendapat promosi pekerjaan</string>
    <string name="option_8B">Mendengar suara mencurigakan</string>
    <string name="option_8C">Mendengar lagu favorit</string>
    <string name="option_8D">Melihat seseorang tersenyum</string>
    <string name="question_9">Apa mekanisme yang dipicu oleh rasa takut?</string>
    <string name="option_9A">Fight or flight</string>
    <string name="option_9B">Relaxation</string>
    <string name="option_9C">Meningkatkan kebahagiaan</string>
    <string name="option_9D">Mengurangi tekanan darah</string>
    <string name="question_10">Apa ciri utama ekspresi senang?</string>
    <string name="option_10A">Bibir tertarik ke bawah</string>
    <string name="option_10B">Alis berkerut</string>
    <string name="option_10C">Senyuman lebar</string>
    <string name="option_10D">Mata melebar</string>
    <string name="question_11">Apa salah satu penyebab seseorang merasa senang?</string>
    <string name="option_11A">Mengalami kegagalan</string>
    <string name="option_11B">Menghabiskan waktu dengan orang yang dicintai</string>
    <string name="option_11C">Mendengar cerita menyeramkan</string>
    <string name="option_11D">Melihat makanan basi</string>
    <string name="question_12">Bagaimana kebahagiaan memengaruhi seseorang?</string>
    <string name="option_12A">Membantu optimisme</string>
    <string name="option_12B">Meningkatkan stres</string>
    <string name="option_12C">Menurunkan semangat hidup</string>
    <string name="option_12D">Membuat seseorang marah</string>
    <string name="question_13">Apa yang dimaksud dengan ekspresi netral?</string>
    <string name="option_13A">Wajah tidak menunjukkan emosi tertentu</string>
    <string name="option_13B">Menunjukkan perasaan bahagia</string>
</resources>